update 2FA lab